correction ptit espace blanc quand collapse ouvert

--- a/src/sass/collapse.scss
+++ b/src/sass/collapse.scss
@@ -31,7 +31,8 @@
 }
 
 .open {
-  padding: 20px 20px;
+  margin-top: -10px;
+  padding: 30px 20px;
   height: auto;
   transform-origin: top center;
   transform: scaleY(1)
